--- a/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
@@ -95,7 +95,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🔮 负载均衡`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点
+custom_proxy_group=🚀 节点选择`select`[]🔮 负载均衡`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
