--- a/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
@@ -132,6 +132,7 @@ custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点
 custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点
+custom_proxy_group=☁️ CFWorker`url-test`(visa|time|wto|chatgpt|icook|IPv6)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
@@ -147,7 +148,7 @@ custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands)`http://cp
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 ;设置分组标志位
 
 enable_rule_generator=true
