--- a/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
@@ -145,7 +145,7 @@ custom_proxy_group=🐅 胖虎`url-test`(胖虎)`http://cp.cloudflare.com/genera
 custom_proxy_group=🛫 三分`url-test`(三分机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 XSUS`url-test`(XSUS)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🛫 ikuuu`url-test`(ikuuu)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 iKuuu`url-test`(iKuuu)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
