--- a/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
@@ -20,6 +20,10 @@ ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,play.googleapis.com
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN,connectivitycheck.gstatic.com
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,android.clients.google.com
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+;谷歌 v6DNS
+ruleset=📢 谷歌,[]IP-CIDR,2606:4700:4700::1111/32
+;Cloudflare v6DNS
+ruleset=🚀 节点选择,[]IP-CIDR,2606:4700:4700::1111/32
 ;ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.com# 
 
 
