--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -14,6 +14,7 @@ ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 ruleset=🎯 全球直连,[]IP-CIDR,219.142.253.114/32
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,aliyuncs.com
 ruleset=🧮 JIARUI,[]DOMAIN-KEYWORD,jiarui
+ruleset=,
 ;修复 Google Play Store 避免GooglePlay商店等待中
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,play.googleapis.com
@@ -113,11 +114,11 @@ custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🔮 
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎲 智能负载`smart`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
+;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择
-custom_proxy_group=🧮 JIARUI`select`[]🎯 全球直连`[]🔮 负载均衡`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
+custom_proxy_group=🧮 JIARUI`select`[]jiarui`[]🎯 全球直连`[]🔮 负载均衡`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
