--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -11,10 +11,21 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
-ruleset=🎯 全球直连,[]IP-CIDR,219.142.253.114/32
-ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,aliyuncs.com
+
+
 ruleset=🧮 JIARUI,[]DOMAIN-KEYWORD,jiarui
-ruleset=,
+;Dataworks
+ruleset=🧮 JIARUI,[]DOMAIN,am-8vbpj287t80nr19an85480o.zhangbei.ads.aliyuncs.com
+;ABI
+ruleset=🧮 JIARUI,[]DOMAIN,rm-8vbbbxr1kn2916v3p9o.mysql.zhangbei.rds.aliyuncs.com
+;内网备份库
+ruleset=🧮 JIARUI,[]IP-CIDR,172.20.96.22/32
+;内网全网段
+ruleset=🧮 JIARUI,[]IP-CIDR,172.20.0.0/16
+;VPN地址
+ruleset=🎯 全球直连,[]IP-CIDR,219.142.253.114/32
+;ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,aliyuncs.com
+
 ;修复 Google Play Store 避免GooglePlay商店等待中
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,play.googleapis.com
