--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -20,6 +20,7 @@ ruleset=🧮 JIARUI,[]DOMAIN,am-8vbpj287t80nr19an85480o.zhangbei.ads.aliyuncs.co
 ruleset=🧮 JIARUI,[]DOMAIN,rm-8vbbbxr1kn2916v3p9o.mysql.zhangbei.rds.aliyuncs.com
 ;内网全网段
 ruleset=🧮 JIARUI,[]IP-CIDR,172.20.0.0/16
+ruleset=🧮 JIARUI,[]IP-CIDR,192.168.20.0/23
 ;ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,aliyuncs.com
 
 ;修复 Google Play Store 避免GooglePlay商店等待中
