--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -13,7 +13,7 @@
 ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 
 
-ruleset=🧮 JIARUI,[]DOMAIN-KEYWORD,jiarui
+;ruleset=🧮 JIARUI,[]DOMAIN-KEYWORD,jiarui
 ;Dataworks
 ruleset=🧮 JIARUI,[]DOMAIN,am-8vbpj287t80nr19an85480o.zhangbei.ads.aliyuncs.com
 ;ABI
