Update custom proxy groups with regex support
修正韩国代理组匹配问题
复用到其它地区代理组
新增犄角旮旯代理组

--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -159,12 +159,13 @@ custom_proxy_group=🛫 一分`url-test`(一分)`http://cp.cloudflare.com/genera
 custom_proxy_group=🛫 69云`url-test`(69云)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 共享`smart`(共享)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=🇺🇸 美国节点`smart`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🇰🇷 韩国节点`smart`(韩|韓|kr|KR||Kr|Korea|首尔|春川)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🇯🇵 日本节点`smart`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🇸🇬 新加坡节点`smart`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🇭🇰 香港节点`smart`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🇹🇼 台湾节点`smart`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇺🇸 美国节点`smart`((?i)US|🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇰🇷 韩国节点`smart`((?i)KR|🇰🇷|韩|Korea|首尔|春川)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇯🇵 日本节点`smart`((?i)JP|🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|Japan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇸🇬 新加坡节点`smart`((?i)SG|🇸🇬|新加坡|坡|狮城|Singapore)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇭🇰 香港节点`smart`((?i)HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇹🇼 台湾节点`smart`((?i)TW|🇹🇼|台|新北|彰化|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=🇨🇳 犄角旮旯`smart`(?!(?i).*?(US|🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates|KR|🇰🇷|韩|Korea|首尔|春川|JP|🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|Japan|SG|🇸🇬|新加坡|坡|狮城|Singapore|HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港|TW|🇹🇼|台|新北|彰化|Taiwan))`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`(jiarui)
 
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
