Add DNS leak detection rules to configuration
Added DNS leak detection rulesets for various domains.

--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -12,6 +12,11 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 
+;DNS泄露检测
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,ipleak.net
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,browserscan.net
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,ipcheck.ing
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,browserleaks.com
 
 ;ruleset=🧮 JIARUI,[]DOMAIN-KEYWORD,jiarui
 ;Dataworks
