Update custom proxy groups in configuration file

--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -129,8 +129,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]🛫 69云`[]🛫 共享`(jiarui)`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=🚀 手动切换`select`🏳️ FINAL`.*
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]🛫 69云`[]🛫 共享`(jiarui)`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🚀 手动切换`select`[]🏳️ FINAL`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速`[]🛫 三分`[]🛫 XSUS`[]🛫 一分`[]☁️ CFWorker`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎲 智能负载`smart`[]🛫 极速`[]🛫 一分`[]🛫 69云`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority="(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates):1.1;(港|HK|hk|Hong Kong|HongKong|hongkong|深港):0.9"
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速`.*`http://cp.cloudflare.com/generate_204`300,,50
@@ -138,11 +138,11 @@ custom_proxy_group=♻️ 自动选择`url-test`^(?!.*(jiarui)).*`http://cp.clou
 custom_proxy_group=🔯 故障转移`fallback`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`(jiarui)
 custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换
-custom_proxy_group=👻 OpenAi`select`[]🚀 节点选择`🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=♊ Gemini`select`[]🚀 节点选择`🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=🤖 Copilot`select`[]🚀 节点选择`🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=📢 GooglePlay`select`[]🚀 节点选择`🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=📢 Google`select`[]🚀 节点选择`🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=👻 OpenAi`select`[]🚀 节点选择`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=♊ Gemini`select`[]🚀 节点选择`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=🤖 Copilot`select`[]🚀 节点选择`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 GooglePlay`select`[]🚀 节点选择`[]🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 Google`select`[]🚀 节点选择`[]🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 共享`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🍘️ 小米服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
@@ -176,12 +176,12 @@ custom_proxy_group=🇸🇬 新加坡节点`smart`((?i)SG|🇸🇬|新加坡|坡
 custom_proxy_group=🇭🇰 香港节点`smart`((?i)HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🇹🇼 台湾节点`smart`((?i)TW|🇹🇼|台|新北|彰化|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 custom_proxy_group=🇨🇳 犄角旮旯`smart`^(?!(?i).*?(jiarui|US|🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates|KR|🇰🇷|韩|Korea|首尔|春川|JP|🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|Japan|SG|🇸🇬|新加坡|坡|狮城|Singapore|HK|🇭🇰|港|Hong Kong|HongKong|hongkong|深港|TW|🇹🇼|台|新北|彰化|Taiwan)).*`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`🚀 节点选择`🚀 手动切换`[]🎲 智能负载`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`(jiarui)
-custom_proxy_group=⛓️‍💥 dialer-selector`smart`🚀 手动切换`((?i)vless|vmess|trojan)
-custom_proxy_group=🏳️ FINAL`select`(webshare)`🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`[]🚀 手动切换`[]🎲 智能负载`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`(jiarui)
 
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
+custom_proxy_group=⛓️‍💥 dialer-selector`smart`[]🚀 手动切换`((?i)vless|vmess|trojan)
+custom_proxy_group=🏳️ FINAL`select`(webshare)`[]🚀 手动切换
 ;设置分组标志位
 
 enable_rule_generator=true
