Add Oracle ruleset and modify proxy groups

--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -12,6 +12,10 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 
+;甲骨文
+ruleset=甲骨文,[]DOMAIN-SUFFIX,oracle.com
+ruleset=甲骨文,[]DOMAIN-SUFFIX,oraclecloud.com
+
 ;DNS泄露检测
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,ipleak.net
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,browserscan.net
@@ -78,6 +82,7 @@ ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ;ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
@@ -141,10 +146,11 @@ custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能
 custom_proxy_group=👻 OpenAi`select`[]🚀 节点选择`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=♊ Gemini`select`[]🚀 节点选择`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=🤖 Copilot`select`[]🚀 节点选择`[]🏳️ FINAL`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
-custom_proxy_group=📢 GooglePlay`select`[]🚀 节点选择`[]🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=📢 Google`select`[]🚀 节点选择`[]🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=📢 GooglePlay`select`[]🚀 节点选择`[]🏳️ FINAL`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🎲 智能负载`[]🛫 极速`[]🛫 一分`[]🛫 共享`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
+custom_proxy_group=甲骨文`select`[]🚀 节点选择`[]🛫 极速`[]🛫 一分`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=🍘️ 小米服务`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 ;custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
 custom_proxy_group=Ⓜ️ Onedrive`select`[]🎯 全球直连`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`🇨🇳 犄角旮旯
