Update custom proxy groups and rulesets

--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -12,6 +12,8 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 
+; 星链机场，直连不能订阅
+ruleset=🚀 节点选择,[]DOMAIN_SUFFIX,rssstarlink.ei38d3if3.xyz
 ;甲骨文
 ruleset=甲骨文,[]DOMAIN-SUFFIX,oracle.com
 ruleset=甲骨文,[]DOMAIN-SUFFIX,oraclecloud.com
@@ -169,6 +171,7 @@ custom_proxy_group=🛫 极速`url-test`(极速机场)`http://cp.cloudflare.com/
 custom_proxy_group=🛫 星链`url-test`(星链机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 一分`url-test`(一分)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 69云`url-test`(69云)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 宝可梦`url-test`(宝可梦)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 共享`smart`(共享)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇺🇸 美国节点`smart`((?i)US|🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
@@ -184,7 +187,7 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选
 ;custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
 ;(?!(?i).*?(jiarui|一分|69云))((?i)vless|vmess|trojan)
 ;(?i)^(?!.*(?:jiarui|一分|69云)).*(?:vless|vmess|trojan).*
-custom_proxy_group=⛓️‍💥 dialer-selector`smart`[]🚀 手动切换`(?!(?i).*?(jiarui))((?i)vless|vmess|trojan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=⛓️‍💥 dialer-selector`smart`[]🚀 手动切换`(?!(?i).*?(jiarui))((?i)vless|vmess|trojan|tuic|ss)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 ;custom_proxy_group=⛓️‍💥 dialer-selector`smart`[]🚀 手动切换`(?!(?i).*?(jiarui|一分|69云))((?i)vless|vmess|trojan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 ;custom_proxy_group=⛓️‍💥 dialer-selector3`smart`[]🚀 手动切换`(?i)^(?!.*(?:jiarui|一分|69云)).*(?:vless|vmess|trojan).*`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
 
