Fix ruleset syntax for node selection

--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -13,7 +13,7 @@
 ruleset=🎯 全球直连,[]DOMAIN,qyapi.weixin.qq.com
 
 ; 星链机场，直连不能订阅
-ruleset=🚀 节点选择,[]DOMAIN_SUFFIX,rssstarlink.ei38d3if3.xyz
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,rssstarlink.ei38d3if3.xyz
 ;甲骨文
 ruleset=甲骨文,[]DOMAIN-SUFFIX,oracle.com
 ruleset=甲骨文,[]DOMAIN-SUFFIX,oraclecloud.com
