--- a/substore/overwrite_config.yaml
+++ b/substore/overwrite_config.yaml
@@ -1233,6 +1233,7 @@ rules:
   - "RULE-SET,openai_openai,👻 OpenAi"
   - "RULE-SET,openai_openai_2,👻 OpenAi"
   - "DOMAIN-SUFFIX,aistudio.google.com,♊ Gemini"
+  - "DOMAIN-SUFFIX,ping0.cc,♊ Gemini"
   - "RULE-SET,gemini_gemini,♊ Gemini"
 
   - "RULE-SET,copilot_claude,🤖 Copilot"
